[tool.poetry]
name = "testing-in-python"
version = "0.1.0"
description = "This is a repo for learning how to test propertly in python"
authors = ["Josep Servat <jservat@outlook.es>"]
license = "GLP"

[tool.poetry.dependencies]
python = "^3.9"
nose = "^1.3.7"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
